--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
   <script type="text/javascript" src="%PUBLIC_URL%/env-config.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
+  <meta name="theme-color" content="#0D2239" />
   <meta name="description" content="Kaytu app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
