--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#0D2239" />
   <meta name="description" content="Kaytu app" />
+  <meta name="apple-mobile-wep-app-capable" content="yes">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-192.png" />
   <!--
     manifest.json provides metadata used when your web app is installed on a
