--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
   <script type="text/javascript" src="%PUBLIC_URL%/env-config.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#0D2239" />
-  <meta name="description" content="Kaytu app" />
+  <meta name="description" content="kaytu app" />
   <meta name="apple-mobile-wep-app-capable" content="yes">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Kaytu</title>
+  <title>kaytu</title>
 </head>
 <body class="h-full">
 <noscript>You need to enable JavaScript to run this app.</noscript>
