--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" class="h-full bg-white">
 <head>
+  <!-- Google Tag Manager -->
+  <script>(function(w, d, s, l, i) {
+      w[l] = w[l] || [];
+      w[l].push({
+          "gtm.start":
+              new Date().getTime(), event: "gtm.js"
+      });
+      var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s), dl = l != "dataLayer" ? "&l=" + l : "";
+      j.async = true;
+      j.src =
+          "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+      f.parentNode.insertBefore(j, f);
+  })(window, document, "script", "dataLayer", "GTM-576425TC");</script>
+  <!-- End Google Tag Manager -->
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
@@ -16,12 +31,22 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-KHKSB3FLSW"></script>
   <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-KHKSB3FLSW');
+
+      function gtag() {
+          dataLayer.push(arguments);
+      }
+
+      gtag("js", new Date());
+      gtag("config", "G-KHKSB3FLSW");
   </script>
 </head>
 <body class="h-full">
+<!-- Google Tag Manager (noscript) -->
+<noscript>
+  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-576425TC"
+          height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!-- End Google Tag Manager (noscript) -->
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
 </body>
