--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>kaytu</title>
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KHKSB3FLSW"></script>
+ <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-KHKSB3FLSW"></script>
   <script>
       window.dataLayer = window.dataLayer || [];
 
@@ -22,9 +22,9 @@
 
       gtag("js", new Date());
       gtag("config", "G-KHKSB3FLSW");
-  </script>
+  </script>-->
   <!-- Google Tag Manager -->
-  <script>(function(w, d, s, l, i) {
+  <!--<script>(function(w, d, s, l, i) {
       w[l] = w[l] || [];
       w[l].push({
           "gtm.start":
@@ -36,15 +36,15 @@
       j.src =
           "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
       f.parentNode.insertBefore(j, f);
-  })(window, document, "script", "dataLayer", "GTM-576425TC");</script>
+  })(window, document, "script", "dataLayer", "GTM-576425TC");</script>-->
   <!-- End Google Tag Manager -->
 </head>
 <body class="h-full">
 <!-- Google Tag Manager (noscript) -->
-<noscript>
+<!--<noscript>
   <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-576425TC"
           height="0" width="0" style="display:none;visibility:hidden"></iframe>
-</noscript>
+</noscript>-->
 <!-- End Google Tag Manager (noscript) -->
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
