fix: Fixes auth

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
   <script type="text/javascript" src="%PUBLIC_URL%/env-config.js"></script>
+  <script src="%PUBLIC_URL%/runtime-env.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#0D2239" />
   <meta name="description" content="kaytu app" />
