--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="kaytu app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>kaytu</title>
+  <title>OpenGovernance</title>
   <!-- Google tag (gtag.js) -->
  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-KHKSB3FLSW"></script>
   <script>
