feat: SMALL CHANGES

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <script src="%PUBLIC_URL%/runtime-env.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#0D2239" />
-  <meta name="description" content="kaytu app" />
+  <meta name="description" content="OpenGovernance app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>OpenGovernance</title>
